# SettingsModel

./: CMakeLists.txt
src/: SettingsModel.h
